2010-01-15  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/applestreamer.py:
	Consider a discontinuity receiving two fragments in a row with
	the same offset
	* flumotion/component/consumers/applestreamer/hlsring.py:
	Don't use the first fragment in a stream to determine the target
	duration as it's usually longer
	* flumotion/component/consumers/applestreamer/mpegtssegmenter.py:
	Check for discontinuities in the stream to reset the segmenter

2010-01-14  Andoni Morales Alastruey,,,  <amorales@flumotion.com>

	reviewed by: <delete if not using a buddy>
	patch by: <delete if not someone else's patch>

	* flumotion/component/consumers/applestreamer/applestreamer.py:
	* flumotion/component/consumers/applestreamer/hlsring.py:
	* flumotion/component/consumers/applestreamer/mpegtssegmenter.py:

2010-01-14  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/applestreamer.py:
	Don't change the component mood after a discontinuity. Let the
	pad monitor handle it.

2010-01-14  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/applestreamer.py:
	* flumotion/component/consumers/applestreamer/hlsring.py:
	Check for buffers discontinuities (on a muxer restart for example),
	and proceed with a soft restart: reset the playlist and wait for the
	minimun fragments' window to be filled again

2010-01-14  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/applestreamer.py:
	Do not start the playlist's fragments from 0, use instead
	the bufer offset to keep the streamers in sync

2010-01-13  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/resources.py:
	Make sessions support compatible with twisted 2.*

2010-01-13  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/test/Makefile.am:
	Add missing test file
